// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should render component 1`] = `
.c2 {
  font-size: 2.4rem;
  margin: 0 0 2.4rem;
}

.c1 {
  background: var(--white);
  border-radius: 0.4rem;
  border: 1px solid var(--gray-1);
  box-shadow: 0px 1px 5px var(--box-shadow);
  margin: 0 auto;
  max-width: 40rem;
  padding: calc(var(--gutter) * 2);
}

.c3 {
  margin: 0 0 var(--gutter);
}

.c4 {
  display: block;
  font-size: 1.6rem;
  line-height: 1.5;
  margin: 0 0 1.2rem;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid var(--gray-1);
  border-radius: 0.4rem;
  box-shadow: 1px 1px 3px var(--box-shadow);
  display: block;
  outline: none;
  padding: 0.8rem 1.2rem;
  width: 100%;
  font-size: 1.4rem;
  line-height: 1.71;
  -webkit-transition: border-color 250ms ease-out;
  transition: border-color 250ms ease-out;
}

.c5:focus {
  border-color: var(--gray-2);
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: var(--primary);
  border: none;
  border-radius: 3.6rem;
  color: white;
  cursor: pointer;
  display: block;
  font-size: 1.4rem;
  line-height: 1;
  margin: 2.8rem auto 0;
  outline: none;
  padding: 1.6rem 5.2rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c6:hover {
  background: var(--primary-lighter);
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
}

.c0 > main {
  width: 100%;
  padding-top: 0;
  padding-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <main>
      <div
        class="c1"
      >
        <h1
          class="c2"
        >
          Login
        </h1>
        <form
          method="POST"
        >
          <div
            class="c3"
          >
            <label
              class="c4"
              for="username"
            >
              Username
            </label>
            <input
              class="c5"
              id="username"
              name="username"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="c3"
          >
            <label
              class="c4"
              for="password"
            >
              Password
            </label>
            <input
              class="c5"
              id="password"
              name="password"
              required=""
              type="password"
              value=""
            />
          </div>
          <input
            class="c6"
            type="submit"
            value="Log in"
          />
        </form>
      </div>
    </main>
  </div>
</div>
`;

exports[`<Login /> should render component in processing status 1`] = `
.c2 {
  font-size: 2.4rem;
  margin: 0 0 2.4rem;
}

.c1 {
  background: var(--white);
  border-radius: 0.4rem;
  border: 1px solid var(--gray-1);
  box-shadow: 0px 1px 5px var(--box-shadow);
  margin: 0 auto;
  max-width: 40rem;
  padding: calc(var(--gutter) * 2);
}

.c3 {
  margin: 0 0 var(--gutter);
}

.c4 {
  display: block;
  font-size: 1.6rem;
  line-height: 1.5;
  margin: 0 0 1.2rem;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid var(--gray-1);
  border-radius: 0.4rem;
  box-shadow: 1px 1px 3px var(--box-shadow);
  display: block;
  outline: none;
  padding: 0.8rem 1.2rem;
  width: 100%;
  font-size: 1.4rem;
  line-height: 1.71;
  -webkit-transition: border-color 250ms ease-out;
  transition: border-color 250ms ease-out;
}

.c5:focus {
  border-color: var(--gray-2);
}

.c8 {
  margin: 2rem 0;
  -webkit-animation: jitEcr 800ms ease-in-out infinite alternate;
  animation: jitEcr 800ms ease-in-out infinite alternate;
}

.c8:after {
  background: var(--primary);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c6 {
  margin: 2.8rem 0 0;
  padding: 1.8rem 0 1.8rem;
}

.c6 .c7 {
  margin: 0 auto;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
}

.c0 > main {
  width: 100%;
  padding-top: 0;
  padding-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <main>
      <div
        class="c1"
      >
        <h1
          class="c2"
        >
          Login
        </h1>
        <form
          method="POST"
        >
          <div
            class="c3"
          >
            <label
              class="c4"
              for="username"
            >
              Username
            </label>
            <input
              class="c5"
              id="username"
              name="username"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="c3"
          >
            <label
              class="c4"
              for="password"
            >
              Password
            </label>
            <input
              class="c5"
              id="password"
              name="password"
              required=""
              type="password"
              value=""
            />
          </div>
          <div
            class="c6"
          >
            <div
              class="c7 c8"
            />
          </div>
        </form>
      </div>
    </main>
  </div>
</div>
`;
